Fix broken layout

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -1,4 +1,5 @@
 .home {
+  clear: left;
 
   margin-top: 40px;
 
